fix tweet article word wrap

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -34,6 +34,7 @@ article.tweet .tweet-header span {
 article.tweet .tweet-msg {
   padding: 0em 1em 1em;
   border-bottom: solid #545149 5px;
+  word-wrap: break-word;
 }
 
 article.tweet footer {
